# full_stack_todo_app

./: .gitignore  CLAUDE.md  DEPLOY.sh  DEPLOYMENT_GUIDE.md  deploy-backend.sh  deploy-frontend.sh
.claude/: settings.local.json
backend/: README.md  alembic.ini  check_tables.py  create_tables.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_db_connection.py  test_registration.py
backend/alembic/: env.py
backend/alembic/versions/: 090a539480a7_add_name_field_to_user_table.py  4e2e1a3839c0_initial_schema.py
backend/src/: celery_app.py  config.py  db.py  main.py
backend/src/api/: auth.py  deps.py  tasks.py
backend/src/database/: database.py  migrations.py  session.py
backend/src/models/: __init__.py  base.py  recurrence.py  task.py  task_tag.py  user.py
backend/src/schemas/: auth.py  task.py  user.py
backend/src/services/: auth_service.py  recurrence_service.py  task_service.py  user_service.py
backend/src/tasks/: recurring_tasks.py
backend/src/utils/: error_handlers.py  filters.py  logging_middleware.py  performance.py  rate_limiter.py  redis_utils.py  security.py  validate_consistency.py  validators.py
backend/tests/: test_api_validation.py  test_rollback.py  test_task_consistency.py
backend/tests/contract/: test_openapi.py
backend/tests/integration/: test_auth_api.py  test_task_api.py
backend/tests/unit/: test_auth.py  test_models.py  test_tasks.py
docs/: api_versioning.md  frontend_backend_consistency_spec.md  rollback_plan.md
frontend/: CLAUDE.md  DEPLOYMENT.md  next.config.ts  package-lock.json  package.json  (+2 more)
(+148 files in other folders)
